# MTBL_PlayerKit

./: README.md  codecov.yml  pyproject.toml
.github/workflows/: python-package.yml
mtbl_playerkit/: __init__.py  espn_player.py  player.py  player_factory.py
tests/: test_espn_player.py  test_player_factory.py
tests/fixtures/: player_data_missing_title_tag.html  player_data_no_id_missing_title_tag.html  players_data.html  temp_espn_arms_universe.html  temp_espn_bats_universe.html
