[tool.poetry]
name = "mtbl-playerkit"
version = "0.2.0"
description = "MTBL Player Kit which manages data conformity for various player sources"
authors = ["Taylor Pubins <tpubz@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
